[tool.poetry]
name = "company-blog"
version = "0.1.0"
description = ""
authors = ["Dilip Sharma <dilip.sharma@ishafoundation.org>"]
readme = "README.md"
packages = [{include = "company_blog"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
